// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a current event correctly 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <EntityInfoBar
      entity={
        FullEvent {
          "entity": Object {
            "images": Array [],
            "name": "Name",
            "venue": Object {
              "latitude": 1,
              "longitude": 2,
            },
          },
          "eventSeries": null,
          "groupedDates": null,
          "isExpiredOn": [MockFunction] {
            "calls": Array [
              Array [
                "2018/01/01",
              ],
            ],
          },
          "tags": Array [],
          "talents": Array [],
          "venue": SummaryVenue {
            "latitude": 1,
            "longitude": 2,
          },
        }
      }
      onClickCopy={[Function]}
    />
    <EntityColumnLayout>
      <EntityColumn>
        <EventMainDetails
          dateStr="2018/01/01"
          event={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityDescription
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityWeSay
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityExternalLinks
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <TagCollection
          tags={Array []}
        />
        <EventTalentCarousel
          onTalentSelected={[Function]}
          selectedTalentId={null}
          talents={Array []}
        />
      </EntityColumn>
      <EntityColumn>
        <OpeningTimes
          dateStr="2018/01/01"
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
      </EntityColumn>
    </EntityColumnLayout>
  </EntityDetailsContainer>
  <BasicSection>
    <EntityMap
      pin={
        Object {
          "lat": 1,
          "lng": 2,
        }
      }
      zoom={14}
    />
  </BasicSection>
</React.Fragment>
`;

exports[`should render a current event correctly that has full details 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <EntityInfoBar
      entity={
        FullEvent {
          "entity": Object {
            "eventSeries": Object {},
            "images": Array [],
            "name": "Name",
            "tags": Array [
              Object {
                "id": "medium/theatre",
                "label": "theatre",
              },
            ],
            "talents": Array [
              Object {
                "lastName": "Last",
              },
            ],
            "venue": Object {
              "latitude": 1,
              "longitude": 2,
            },
          },
          "eventSeries": SummaryEventSeries {},
          "groupedDates": null,
          "isExpiredOn": [MockFunction] {
            "calls": Array [
              Array [
                "2018/01/01",
              ],
            ],
          },
          "tags": Array [],
          "talents": Array [
            EventSummaryTalent {
              "lastName": "Last",
            },
          ],
          "venue": SummaryVenue {
            "latitude": 1,
            "longitude": 2,
          },
        }
      }
      onClickCopy={[Function]}
    />
    <EntityColumnLayout>
      <EntityColumn>
        <EventMainDetails
          dateStr="2018/01/01"
          event={
            FullEvent {
              "entity": Object {
                "eventSeries": Object {},
                "images": Array [],
                "name": "Name",
                "tags": Array [
                  Object {
                    "id": "medium/theatre",
                    "label": "theatre",
                  },
                ],
                "talents": Array [
                  Object {
                    "lastName": "Last",
                  },
                ],
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": SummaryEventSeries {},
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityDescription
          entity={
            FullEvent {
              "entity": Object {
                "eventSeries": Object {},
                "images": Array [],
                "name": "Name",
                "tags": Array [
                  Object {
                    "id": "medium/theatre",
                    "label": "theatre",
                  },
                ],
                "talents": Array [
                  Object {
                    "lastName": "Last",
                  },
                ],
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": SummaryEventSeries {},
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityWeSay
          entity={
            FullEvent {
              "entity": Object {
                "eventSeries": Object {},
                "images": Array [],
                "name": "Name",
                "tags": Array [
                  Object {
                    "id": "medium/theatre",
                    "label": "theatre",
                  },
                ],
                "talents": Array [
                  Object {
                    "lastName": "Last",
                  },
                ],
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": SummaryEventSeries {},
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EventSeriesLink
          eventSeries={SummaryEventSeries {}}
        />
        <EntityExternalLinks
          entity={
            FullEvent {
              "entity": Object {
                "eventSeries": Object {},
                "images": Array [],
                "name": "Name",
                "tags": Array [
                  Object {
                    "id": "medium/theatre",
                    "label": "theatre",
                  },
                ],
                "talents": Array [
                  Object {
                    "lastName": "Last",
                  },
                ],
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": SummaryEventSeries {},
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <TagCollection
          tags={Array []}
        />
        <Divider
          type="basic"
        />
        <EventTalentCarousel
          onTalentSelected={[Function]}
          selectedTalentId={null}
          talents={
            Array [
              EventSummaryTalent {
                "lastName": "Last",
              },
            ]
          }
        />
      </EntityColumn>
      <EntityColumn>
        <OpeningTimes
          dateStr="2018/01/01"
          entity={
            FullEvent {
              "entity": Object {
                "eventSeries": Object {},
                "images": Array [],
                "name": "Name",
                "tags": Array [
                  Object {
                    "id": "medium/theatre",
                    "label": "theatre",
                  },
                ],
                "talents": Array [
                  Object {
                    "lastName": "Last",
                  },
                ],
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": SummaryEventSeries {},
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <Divider
          type="basic"
        />
      </EntityColumn>
    </EntityColumnLayout>
  </EntityDetailsContainer>
  <BasicSection>
    <EntityMap
      pin={
        Object {
          "lat": 1,
          "lng": 2,
        }
      }
      zoom={14}
    />
  </BasicSection>
</React.Fragment>
`;

exports[`should render an expired event correctly 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <EntityInfoBar
      entity={
        FullEvent {
          "entity": Object {
            "images": Array [],
            "name": "Name",
            "venue": Object {
              "latitude": 1,
              "longitude": 2,
            },
          },
          "eventSeries": null,
          "groupedDates": null,
          "isExpiredOn": [MockFunction] {
            "calls": Array [
              Array [
                "2018/01/01",
              ],
            ],
          },
          "tags": Array [],
          "talents": Array [],
          "venue": SummaryVenue {
            "latitude": 1,
            "longitude": 2,
          },
        }
      }
      onClickCopy={[Function]}
    />
    <EntityColumnLayout>
      <EntityColumn>
        <EventMainDetails
          dateStr="2018/01/01"
          event={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityDescription
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityWeSay
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityExternalLinks
          entity={
            FullEvent {
              "entity": Object {
                "images": Array [],
                "name": "Name",
                "venue": Object {
                  "latitude": 1,
                  "longitude": 2,
                },
              },
              "eventSeries": null,
              "groupedDates": null,
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <TagCollection
          tags={Array []}
        />
        <EventTalentCarousel
          onTalentSelected={[Function]}
          selectedTalentId={null}
          talents={Array []}
        />
      </EntityColumn>
      <EntityColumn>
        <Message
          showIcon={true}
          type="error"
        >
          This event has expired.
        </Message>
      </EntityColumn>
    </EntityColumnLayout>
  </EntityDetailsContainer>
  <BasicSection>
    <EntityMap
      pin={
        Object {
          "lat": 1,
          "lng": 2,
        }
      }
      zoom={14}
    />
  </BasicSection>
</React.Fragment>
`;
